# rustyvpn

./: .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  init.sh  package-lock.json  package.json
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: global-dxhaa82492af33a8f19.css
android/app/src/main/kotlin/dev/dioxus/main/: MainActivity.kt  WryActivity.kt
android/app/src/main/kotlin/dev/dioxus/main/jni/: NativeBridge.kt  VpnHelper.kt
android/app/src/main/kotlin/dev/dioxus/main/service/: VpnHandler.kt
