[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/desktop",
    "packages/mobile",
    "core/ssh",
    "core/proxy",
    "core/utils"
]

[workspace.dependencies]
dioxus = { version = "0.7.0" }
ssh = {path = "core/ssh"}
proxy = {path = "core/proxy"}
socks = {path = "core/socks"}
utils = { path = "core/utils" }
anyhow = "1.0.100"
russh = "0.54.6"
tokio = "1.48.0"
tokio-socks = "0.5.2"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
reqwest = { version = "0.12.24", features = ["json", "socks"] }
serde = { version="1.0.228", features=["derive"] }
openssl = { version = "0.10.74" }
libc = { version = "0.2.177" } 
jni = { version = "0.21.1" }

# workspace
ui = { path = "packages/ui" }

